fix(thread): replace deprecated getId method